fix responsive bootstrap navbar taking too much width

--- a/web/flipped/common/static/common/css/main.css
+++ b/web/flipped/common/static/common/css/main.css
@@ -4,6 +4,12 @@
    Author's custom styles
    ========================================================================== */
 
+.navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+    margin-left: 0px;
+}
+
+
+
 
 
 
